# contextual-shards

./: .gitignore  README.md  literature-review.md  main.py  pyproject.toml  pyrightconfig.json  references.bib  research-proposal.md
.claude/logs/: session-20260316-add72936.md  session-20260316-b9f64774.md  session-20260316-babf3b6a.md  session-20260316-c65e2e70.md  session-20260316-d6153d6d.md  session-20260317-add72936.md  session-20260317-d2864e6c.md  session-20260317-ef6f0577.md
plan/: 2026-03-16-contextual-shards.md
run/conf/: config.yaml
run/conf/agent/: impala.yaml
run/conf/environment/: maze.yaml  minigrid.yaml
run/conf/experiment1/: default.yaml
run/conf/experiment2/: default.yaml
run/conf/experiment3/: default.yaml
run/conf/experiment4/: default.yaml
run/conf/probe/: linear.yaml  mdl.yaml
run/conf/training/: rl_agent.yaml  sae.yaml
run/pipeline/analysis/: experiment1_causal.py  experiment1_integrate.py  experiment1_probing.py  experiment2_separability.py  experiment3_dist.py  experiment4_sae.py  experiment5_generalize.py
run/pipeline/prepare_data/: collect_activations.py
run/pipeline/training/: train_rl_agent.py  train_sae.py
src/agent_module/: __init__.py  base_agent.py
src/agent_module/hooks/: activation_hooks.py
src/agent_module/policy/: impala_agent.py
src/analysis_module/statistics/: __init__.py  stat_tests.py
src/analysis_module/visualization/: __init__.py  shard_visualizer.py
src/causal_module/: __init__.py
src/causal_module/patch/: __init__.py  activation_patcher.py
src/causal_module/shard_vector/: __init__.py  shard_vector.py
src/causal_module/tracing/: __init__.py  causal_tracer.py
src/data_module/: __init__.py
src/data_module/activation_dataset/: __init__.py  (+1 more)
src/environment_module/: __init__.py  base_env.py
src/probe_module/: __init__.py  base_probe.py
src/sae_module/: __init__.py
src/utils/: __init__.py  auto_import.py
tests/integration/: test_pipeline_smoke.py
tests/test_agent_module/: test_agent_module.py
tests/test_analysis_module/: test_stat_tests.py
tests/test_causal_module/: test_activation_patcher.py  test_causal_tracer.py  test_shard_vector.py
tests/test_data_module/: test_activation_dataset.py  test_concept_labeler.py  test_rollout_collector.py
tests/test_environment_module/: test_environment_module.py
tests/test_probe_module/: test_linear_probe.py
tests/test_sae_module/: test_sparse_autoencoder.py
tests/test_shard_module/: test_shard_detector.py
tests/test_trainer_module/: test_cheese_distribution.py
(+30 files in other folders)
