[project]
name = "contextual-shards"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gym3==0.3.3",
    "h5py>=3.16.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "minigrid",
    "numpy>=2.4.3",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "procgen==0.10.7",
    "procgen-tools",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
procgen-tools = { git = "https://github.com/aristizabal95/procgen-tools.git" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
