[project]
name = "contextual-shards"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14"
dependencies = [
    "h5py>=3.16.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.2",
    "minigrid",
    "numpy>=1.22.1",
    "omegaconf>=2.3.0",
    "pandas>=1.5.3",
    "plotly>=5.13.0",
    # procgen==0.10.7 has no Python 3.11+ wheels (only cp37-cp310); install manually if needed
    # procgen-tools depends on procgen; install manually from git if needed
    "scikit-learn>=1.8.0",
    "scipy>=1.10.0",
    "torch>=1.13.1",
    "torchvision>=0.25.0",
    "tqdm>=4.64.1",
]

[tool.uv]
override-dependencies = [
    "torch>=2.10.0",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
