[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "contextual_shards"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8,<3.11"
dependencies = [
    "setuptools==65.5.0",
    "h5py",
    "hydra-core",
    "matplotlib",
    "minigrid",
    "numpy",
    "omegaconf",
    "pandas",
    "plotly",
    "scikit-learn",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
    "procgen>=0.10.7",
    "procgen-tools",
]

[tool.uv]
override-dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "plotly",
    "pandas",
    "scipy",
]

[tool.uv.sources]
procgen-tools = { git = "https://github.com/aristizabal95/procgen-tools.git" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
